--- a/GameBoyEmulator/GameBoyEmulator/GameBoyEmulator.vcxproj
+++ b/GameBoyEmulator/GameBoyEmulator/GameBoyEmulator.vcxproj
@@ -139,15 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cartridge.cpp" />
     <ClCompile Include="Cpu.cpp" />
-    <ClCompile Include="gameBoy.cpp" />
+    <ClCompile Include="GameBoycpp.cpp" />
     <ClCompile Include="Lcd.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Memory.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cartridge.h" />
     <ClInclude Include="Cpu.h" />
+    <ClInclude Include="GameBoy.h" />
     <ClInclude Include="Lcd.h" />
     <ClInclude Include="Memory.h" />
   </ItemGroup>
