--- a/GameBoyEmulator/GameBoyEmulator/GLFW/include/.gitattributes
+++ b/GameBoyEmulator/GameBoyEmulator/GLFW/include/.gitattributes
@@ -1,4 +1,2 @@
-*.h linguistic-language=C++
-*.hpp linguistic-language=C++
-*.c linguistic-language=C++
-*.cpp linguistic-language=C++
+*.c linguist-detectable=false
+*.h linguist-detectable=false
