--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-GameBoyEmulator/GameBoyEmulator/GLFW/include/*.h linguistic-language=C++
-GameBoyEmulator/GameBoyEmulator/GLFW/include/*.hpp linguistic-language=C++
-GameBoyEmulator/GameBoyEmulator/GLFW/include/*.c linguistic-language=C++
-GameBoyEmulator/GameBoyEmulator/GLFW/include/*.cpp linguistic-language=C++
+GameBoyEmulator/GameBoyEmulator/GLFW/include/* linguist-vendored
