--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Ignore library files's language for github display
 GameBoyEmulator/GameBoyEmulator/GLFW/include/* linguist-vendored
+
+GameBoyEmulator/GameBoyEmulator/glew/include/GL/* linguist-vendored
