--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Ignore library files's language for github display
 GameBoyEmulator/GameBoyEmulator/GLFW/* linguist-vendored
+../glew/* linguist-vendored
