--- a/GameBoyEmulator/GameBoyEmulator/GameBoyEmulator.vcxproj
+++ b/GameBoyEmulator/GameBoyEmulator/GameBoyEmulator.vcxproj
@@ -149,8 +149,9 @@
   <ItemGroup>
     <ClCompile Include="binaryLib.cpp" />
     <ClCompile Include="Cpu.cpp" />
+    <ClCompile Include="debug.cpp" />
     <ClCompile Include="GameBoy.cpp" />
-    <ClCompile Include="openGlLib.cpp" />
+    <ClCompile Include="GlfwOpenglLib.cpp" />
     <ClCompile Include="Ppu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Memory.cpp" />
@@ -159,8 +160,9 @@
   <ItemGroup>
     <ClInclude Include="binaryLib.h" />
     <ClInclude Include="Cpu.h" />
+    <ClInclude Include="debug.h" />
     <ClInclude Include="GameBoy.h" />
-    <ClInclude Include="openGlLib.h" />
+    <ClInclude Include="GlfwOpenglLib.h" />
     <ClInclude Include="Ppu.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="settings.h" />
