--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,5 @@
 
 # Ignore folder
 /Bios_Games
-/SDL_version
-/GlfwOpengl_version
-
-# Ignore GLFW libs doc
-/GameBoyEmulator/GameBoyEmulator/GLFW/docs
+/GameBoyEmulator/.vs
+/GameBoyEmulator/out
