Corrected CMakeLists.txt

--- a/GameBoyEmulator/GameBoyEmulator/CMakeLists.txt
+++ b/GameBoyEmulator/GameBoyEmulator/CMakeLists.txt
@@ -3,7 +3,8 @@
 cmake_minimum_required (VERSION 3.8)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED YES)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(SRCS main.cpp binaryLib.cpp Cartridge.cpp Cpu.cpp GameBoy.cpp Joypad.cpp Memory.cpp Ppu.cpp SdlLib.cpp Spu.cpp)
 set(HEADERS binaryLib.h Cartridge.h Cpu.h GameBoy.h Joypad.h Memory.h Ppu.h SdlLib.h Spu.h)
