--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-GameBoyEmulator/GameBoyEmulator/SDL2/** linguist-vendored 
+* text=auto eol=lf
+
+GameBoyEmulator/GameBoyEmulator/SDL2/** linguist-vendored
