--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    # - uses: sudo apt-get install libsdl2-dev@v3
+
+    - name: Install libs
+	sudo apt-get install libsdl2-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
