--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,8 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install libs
-	sudo apt-get install libsdl2-dev
+      # Install SDL2 lib
+      run: sudo apt-get install libsdl2-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
