--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 *.icph
 
 # Ignore folder
-/Bios_Games
-/GameBoyEmulator/.vs
-/GameBoyEmulator/out
+Bios_Games/
+.vs/
+out/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,cmake,c++,c,clion+all
