--- a/GameBoyEmulator/CMakeLists.txt
+++ b/GameBoyEmulator/CMakeLists.txt
@@ -6,8 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(SRCS main.cpp binaryLib/binaryLib.cpp IniLoader/IniLoader.cpp Cartridge.cpp Cpu.cpp GameBoy.cpp Joypad.cpp Memory.cpp Ppu.cpp Spu.cpp MBC/Mbc.cpp MBC/Rom.cpp)
-set(HEADERS binaryLib/binaryLib.h IniLoader/IniLoader.h Cartridge.h Cpu.h GameBoy.h Joypad.h Memory.h Ppu.h  Spu.h MBC/Mbc.h MBC/Rom.h)
+set(SRCS main.cpp binaryLib/binaryLib.cpp IniLoader/IniLoader.cpp Cartridge.cpp Cpu.cpp GameBoy.cpp Joypad.cpp Memory.cpp Ppu.cpp Spu.cpp MBC/Mbc.cpp MBC/MbcRom.cpp)
+set(HEADERS binaryLib/binaryLib.h IniLoader/IniLoader.h Cartridge.h Cpu.h GameBoy.h Joypad.h Memory.h Ppu.h  Spu.h MBC/Mbc.h MBC/MbcRom.h)
 
 add_executable(${PROJECT_NAME} ${SRCS} ${HEADERS})
 
@@ -28,27 +28,3 @@ elseif(UNIX)
 else()
 	message(FATAL_ERROR "OS not configured in CMakeLists.txt")
 endif()
-
-
-#[[
-# add SFML
-set(SFML_DIR "${CMAKE_SOURCE_DIR}/NesEmulator/lib/cmake/SFML")
-find_package(SFML REQUIRED COMPONENTS audio network graphics window system)
-target_link_libraries(${PROJECT_NAME} sfml-audio sfml-network sfml-graphics sfml-window sfml-system)
-#]]
-
-#set(SDL2_DIR "${CMAKE_SOURCE_DIR}/GameBoyEmulator/SDL2/include")
-
-#[[
-find_package(SDL2 REQUIRED)
-
-if(WIN32)
-	#set(SDL2_PATH $ENV{SDL2_PATH})
-	set(SDL2_PATH "${CMAKE_CURRENT_SOURCE_DIR}/GameBoyEmulator/SDL2/lib")
-	target_link_libraries(${PROJECT_NAME} SDL2 SDL2main SDL2test)
-elseif(UNIX)
-	target_link_libraries(${PROJECT_NAME} SDL2)
-else()
-	message(FATAL_ERROR "OS not configured in CMakeLists.txt")
-endif()
-#]]
